--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 <meta charset="utf-8" />
 <meta name="description" content="LumoSign. Tweaked apps, sin Jailbreak - get tweaked apps for iOS for free!">
 <meta name="keywords" content="spotify++, lumos, Lumos, LumoSign, Snapchat Hack, Snapchat, Instagram, Tweaked, ipa, ipas, Jailbreak, App, Mobile, iOS, Cydia, Tweak, Box, MovieBox, PlayBox, get tweaks ios no jailbreak, Sideload, Sideloaded, Themes, Apps, Paid, Free, Hack, No Jailbreak, No PC, Without PC, Tweaked Snapchat, No jailbreak, emulators, emulator, ios, ipad mini, ipod touch, install cracked apps, gba4ioskins, cheats, update, new, nds4ios, downloadiosemus, download torrents ios no jailbreak, angelxwind, nintendo ds emulator, apps crash, official, Free, iPhone, iPad, iPod, no jailbreak tweaks, tweaks without jailbreak, ios no jailbreak, ios tweaks no jailbreak">
-
+  
+<style>
 body {
   background-color: #daa520;
 }
+  </style
 </head>
 
 <body>
 <h>LumoSign</h>
-<a href="itms-services://?action=download-manifest&url=https://appvalley.vip/app/plists/1/install.plist">AppValley app</a>
+<p><a href="itms-services://?action=download-manifest&url=https://appvalley.vip/app/plists/1/install.plist">AppValley app</a></p>
 
 </body>
 
