--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@ body {
 
 <body>
 <h>LumoSign</h>
+  
 <p><a href="itms-services://?action=download-manifest&url=https://appvalley.vip/app/plists/1/install.plist">AppValley app</a></p>
+
+<p><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/spotify.plist">Spotfy++, no ads, ever!</a></p>
 
 </body>
 
