--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 
 <p><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/spotify.plist">Spotfy++, no ads, ever!</a></p>
 
-<p><a hre=="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/inds.plist">iNDS</a></p>
+<p><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/inds.plist">iNDS</a></p>
 
 </body>
 
