--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ body {
 
 <p><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/inds.plist">iNDS</a></p>
 
+<P><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/plists/ufofinder.plist"</a></p>
+
 </body>
 
 </html>
