fix site, add ufofinder

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
 
 <p><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/inds.plist">iNDS</a></p>
 
-<P><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/plists/ufofinder.plist">ufofinder</a></p>
+<P><a href="itms-services://?action=download-manifest&url=https://lucaiii.github.io/lumosign/plists/ufofinder.plist">ufofinder</a></p>
 
 </body>
 
